--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -1,4 +1,4 @@
-name: flake8 Linter
+name: flake8 Lint
 
 on: [push, pull_request]
 
@@ -13,5 +13,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
+      - name: Configure flake8
+        run: |
+          echo "[flake8]" >> .flake8
+          echo "exclude = .venv" >> .flake8
       - name: flake8 Lint
         uses: py-actions/flake8@v2
